setField, changeStr 메소드 추가 및 테스트케이스 추가